# useful_utils

./: CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.py  test_timing.py
docs/: README.md  examples.md  functions.md  installation.md  public_usage.md
examples/: help_example.py  logging_example.py  timing_example.py
useful_utils/: __init__.py  cli.py  help_utils.py  logging_utils.py  timing_utils.py
utils/: __init__.py  help_utils.py
