[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "useful-utils"
version = "1.0.0"
description = "A collection of reusable code snippets and utilities for cross-project development"
readme = "README.md"
authors = [
    {name = "Hung Nguyen"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.7"
dependencies = [
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.8",
]

[project.scripts]
useful-utils = "utils.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/useful_utils"
Repository = "https://github.com/yourusername/useful_utils"
Issues = "https://github.com/yourusername/useful_utils/issues" 